--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </ul>
       </nav>
     </header>
+
     <main>
       <section class="hero">
         <div class="heroText">
@@ -28,9 +29,13 @@
             tempore quos totam cumque sunt.
           </p>
         </div>
-        <img class="heroImg" src="" alt="Portrett av Julie" />
+        <img class="heroImg" src="photo1.jpg" alt="Portrett av Julie" />
       </section>
 
+      <!-- 
+        Utfordring 1:
+        Se på hvordan HTML er satt opp på about-section og modifiser class-navn i CSS til å være likt hvordan hero-section ser ut
+       -->
       <section class="about">
         <div class="aboutText">
           <h2>Om meg</h1>
@@ -41,7 +46,7 @@
         </div>
         <div>
           <p>Sjekk ut min GitHub!</p>
-          <img class="aboutImg" src="" alt="Logo til github" />
+          <img class="aboutImg" src="photo2.jpg" alt="Logo til github" />
         </div>
       </section>
 
